# STM32TemplateProjectMCP

./: .gitignore  CMakeLists.txt  InstructionsGuideForDummies.md  Makefile  README.md  config.mk  stm32.config.json
cmake/: gcc-arm-none-eabi.cmake
mcp/: README.md  claude_desktop_config.example.json  pyproject.toml  requirements.txt  smoke_test.py  stm32_mcp_server.py
project/: README.md  STM32F407VGTX_FLASH.ld
project/Core/Inc/: main.h  stm32f4xx_it.h
project/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
project/Drivers/: .gitkeep
project/User/Inc/: .gitkeep
project/User/Src/: .gitkeep
tools/: discover_toolchain.ps1  vendor_hal.ps1
